<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navMenuArteLista"
    app:startDestination="@+id/navHome">
    <fragment
        android:id="@+id/navHome"
        android:name="com.example.login.ui.home.HomeFragment"
        android:label="@string/strHome"
        tools:layout="@layout/fragment_inicio" />
    <fragment
        android:id="@+id/navGaleria"
        android:name="com.example.login.ui.Galeria.GaleriaFragment"
        android:label="@string/strGaleria"
        tools:layout="@layout/fragment_galeria" />
    <fragment
        android:id="@+id/navEvento"
        android:name="com.example.login.ui.notifications.NotificationsFragment"
        android:label="@string/strEvento"
        tools:layout="@layout/fragment_evento" />
    <fragment
        android:id="@+id/navArtista"
        android:name="com.example.login.ui.artista.ArtistaFragment"
        android:label="@string/strArtista"
        tools:layout="@layout/fragment_artista" />
</navigation>